# triples

./: Cargo.toml  Makefile  README.md  SECURITY.md  TODO.md  build.rs
.cargo/: config
.github/: dependabot.yml
src/: api.rs  csv.rs  csv_file.rs  csv_triples_file.rs  data.rs  db.rs  db_api.rs  lib.rs  main.rs  prefix.lalrpop  sparql.lalrpop  sparql_data.rs  ttl.lalrpop  ttl_body.lalrpop  ttl_data.rs  ttl_file.rs  ttl_prefix.lalrpop  ttl_stream.rs  turtle.lalrpop  turtle_stream.rs
tests/: csv_export.rs  db_batch_load.rs  prefix_parsing.rs  sparql_parsing.rs  subject_parsing.rs  ttl_body_parsing.rs  ttl_line_parsing.rs  ttl_prefix_parsing.rs  turtle_body_parsing.rs  turtle_prefix_parsing.rs
tests/data/: bricks.ttl  bricks2.ttl  bricks_ex1.ttl  k8p.ttl  k8p_sm.ttl  test.csv
