[package]
name = "triples"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "A lib and cli for storing data triples"
keywords = ["rdf", "event-sourcing", "triples"]
documentation = "https://docs.rs/triples"
repository = "https://github.com/navicore/triples"

[lib]
name = "triples"
path = "src/lib.rs"

[[bin]]
name = "triples"
path = "src/main.rs"

[dependencies]
uuid = { version = "1.4.1", features = [ "v4" ] }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal"] }
chrono = "0.4"
futures = "0.3"
tokio-util = "0.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
sqlx = { version = "0.7", features = [ "sqlite", "runtime-tokio-native-tls" ] }

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
