[package]
name = "triples"
version = "0.2.4"
edition = "2021"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "A lib and cli for storing data triples"
keywords = ["rdf", "event-sourcing", "triples"]
documentation = "https://docs.rs/triples"
repository = "https://github.com/navicore/triples"

[lib]
name = "triples"
path = "src/lib.rs"

[[bin]]
name = "triples"
path = "src/main.rs"

[dependencies]
regex = "1"
uuid = { version = "1.5.0", features = [ "v4" ] }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "signal", "io-std"] }
chrono = "0.4"
futures = "0.3"
tokio-util = "0.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-native-tls", "macros"] }
anyhow = "1.0"
glob = "0.3.1"
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "0.20.0"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres", "disable-sqlite"]
disable-sqlite = []
